// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should get sections 1`] = `
Object {
  "count": 2,
  "nodes": Array [
    Object {
      "id": "2b01742c-d443-11e7-9296-cec278b6b50a",
      "language": "en",
      "name": "Gal_riv_1_sec_1",
    },
    Object {
      "id": "3a6e3210-d529-11e7-9296-cec278b6b50a",
      "language": "en",
      "name": "Gal_riv_1_sec_2",
    },
  ],
}
`;

exports[`should return river 1`] = `
Object {
  "altNames": Array [],
  "id": "a8416664-bfe3-11e7-abc4-cec278b6b50a",
  "language": "en",
  "name": "Gal_Riv_One",
  "region": Object {
    "id": "bd3e10b6-7624-11e7-b5a5-be2e44b06b34",
    "language": "en",
    "name": "Galicia",
  },
  "sections": Object {
    "count": 2,
    "nodes": Array [
      Object {
        "id": "2b01742c-d443-11e7-9296-cec278b6b50a",
        "language": "en",
        "name": "Gal_riv_1_sec_1",
      },
      Object {
        "id": "3a6e3210-d529-11e7-9296-cec278b6b50a",
        "language": "en",
        "name": "Gal_riv_1_sec_2",
      },
    ],
  },
}
`;
